set(mds_srcs
	Anchor.cc 
	AnchorClient.cc
	AnchorServer.cc 
	Capability.cc 
	CapObject.cc
	CDentry.cc 
	CDirFrag.cc 
	CDirStripe.cc 
	CDirPlacement.cc 
	CInode.cc 
	Dumper.cc 
	flock.cc
	InoTable.cc 
	InodeContainer.cc
	journal.cc 
	Locker.cc 
	locks.c 
	LogEvent.cc 
	MDBalancer.cc 
	MDCache.cc 
	MDLog.cc
	MDS.cc 
	MDSTable.cc
	MDSTableClient.cc 
	MDSTableServer.cc 
	Mutation.cc 
	ParentStats.cc
	Resetter.cc 
	Server.cc 
	SessionMap.cc 
	SnapRealm.cc 
	SnapServer.cc 
	snap.cc 
	Stray.cc
	${CMAKE_SOURCE_DIR}/src/osdc/Journaler.cc
)

add_library(mds ${mds_srcs})
